# niceshop

./: .gitignore  README.md  _try_stuff.ipynb  main.py  pyproject.toml
resources/: main.html
src/agents/: __init__.py
src/agents/atomicagents/: agent.py
src/agents/langchain/: agent.py
src/agents/llamaindex/: agent.py  workflow.py
src/agents/pydanticai/: agent.py
src/shop/: catalog.py  entities.py  session.py
